[gd_scene load_steps=20 format=3 uid="uid://cvayh37acil7h"]

[ext_resource type="PackedScene" uid="uid://c7dtdy11356p2" path="res://scenes/user_interface.tscn" id="1_6ecoj"]
[ext_resource type="Script" path="res://scripts/levels/katedra_letectva/katedra_letectva.gd" id="1_aoqud"]
[ext_resource type="Script" path="res://scripts/levels/katedra_letectva/velitel_katedry_letectva.gd" id="2_1jabr"]
[ext_resource type="Texture2D" uid="uid://c1fmsn8fmgtj4" path="res://textures/katedra_letectva_background.png" id="3_dxka8"]
[ext_resource type="PackedScene" uid="uid://ltped2ukoxcp" path="res://scenes/interaction_area.tscn" id="3_ldv7o"]
[ext_resource type="PackedScene" uid="uid://be23cir7jqtiw" path="res://scenes/grippen_jump/grippen_jump.tscn" id="4_iffva"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="4_syv7d"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="5_0pyyi"]
[ext_resource type="Texture2D" uid="uid://b2k8ok6vl14cw" path="res://images/npc_characters/velitel_katedry_letectva.png" id="5_37haf"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="6_0pjhw"]
[ext_resource type="Resource" uid="uid://dr5xyuk5uctpn" path="res://dialogues/velitel_katedry_letectva.tres" id="6_3f45t"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="7_ola4d"]
[ext_resource type="PackedScene" uid="uid://dprbjqvu2al7c" path="res://scenes/player.tscn" id="11_y8v7m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i28kh"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2tv8s"]
radius = 41.0122

[sub_resource type="RichTextEffect" id="RichTextEffect_8edh5"]
script = ExtResource("5_0pyyi")

[sub_resource type="RichTextEffect" id="RichTextEffect_xxw0x"]
script = ExtResource("6_0pjhw")

[sub_resource type="RichTextEffect" id="RichTextEffect_6wp5g"]
script = ExtResource("7_ola4d")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xr6jp"]
size = Vector2(175, 807)

[node name="KatedraLetectva" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_aoqud")
default_position = Vector2(1426, 1238)
camera_limit_bottom = 2160
camera_limit_right = 1920

[node name="user_interface" parent="." instance=ExtResource("1_6ecoj")]

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_dxka8")
centered = false

[node name="velitel_katedry_letectva" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(368, 1241)
collision_mask = 2
script = ExtResource("2_1jabr")
texture = ExtResource("5_37haf")
dialogue_data = ExtResource("6_3f45t")
start_id = "START"
minigame = ExtResource("4_iffva")

[node name="Sprite2D" type="Sprite2D" parent="velitel_katedry_letectva"]
y_sort_enabled = true
offset = Vector2(0, -90)

[node name="interaction_area" parent="velitel_katedry_letectva" instance=ExtResource("3_ldv7o")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_katedry_letectva/interaction_area"]
shape = SubResource("CircleShape2D_i28kh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_katedry_letectva"]
shape = SubResource("CircleShape2D_2tv8s")

[node name="CanvasLayer" type="CanvasLayer" parent="velitel_katedry_letectva"]

[node name="DialogueBox" type="Panel" parent="velitel_katedry_letectva/CanvasLayer"]
visible = false
z_index = 3
offset_left = 460.0
offset_top = 808.0
offset_right = 1460.0
offset_bottom = 1064.0
script = ExtResource("4_syv7d")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_8edh5"), SubResource("RichTextEffect_xxw0x"), SubResource("RichTextEffect_6wp5g")])

[node name="player" parent="." instance=ExtResource("11_y8v7m")]
position = Vector2(1426, 1238)

[node name="sumavska_transition" type="Area2D" parent="."]
position = Vector2(767, 1070)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sumavska_transition"]
position = Vector2(939.5, 67.5)
shape = SubResource("RectangleShape2D_xr6jp")

[node name="boundaries" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boundaries"]
polygon = PackedVector2Array(1920, 2160, 0, 2160, 0, 296, -8, 296, -8, 2168, 1928, 2168, 1928, -8, -8, -8, -8, 8, -8, 296, 380.563, 296, 384, 512, 1496, 496, 1632, 1024, 1632, 616, 1800, 1040, 1792, 1640)

[connection signal="dialogue_signal" from="velitel_katedry_letectva/CanvasLayer/DialogueBox" to="velitel_katedry_letectva" method="_on_dialogue_signal"]
[connection signal="body_entered" from="sumavska_transition" to="." method="_on_sumavska_transition_body_entered"]
